fix :make overflow hidden at small screen

--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,11 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+html,
+body {
+    overflow-x: hidden;
+    max-width: 100%;
+}
 body {
     background-color: var(--bg-primary);
     color: var(--text-primary);
@@ -29,7 +33,7 @@ body {
     line-height: 1.6;
     letter-spacing: -0.01em;
     scroll-behavior: smooth;
-    overflow-x: hidden;
+
 }
 
 .arabic-text {
